# Nexus-Project1

./: .gitignore  LICENSE  README.md  engine.py  exercise_logic.py  feedback_data.npy  label_map.json  main.py  nexus.ipynb  nexus_stgcn_final.pth  pyproject.toml  realtime.py  test.py
.github/workflows/: backend.yml  frontend.yml
backend/: .gitignore  README.md  data.json  nexus_stgcn_v2.pth  requirements.txt  test_db.py  test_integration.py  test_register.py  test_video_ws.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  analyze.py  demo.py  latest.py  rehab.py  stream.py  summary.py
backend/app/core/: auth.py
backend/app/core/ai/: inference.py  model.py
backend/app/core/biomechanics/: engine.py
backend/app/core/decision/: fitness.py  interpreter.py  rehab.py
backend/app/db/: crud.py  database.py  models.py
backend/app/schemas/: analyze.py  rehab.py  summary.py
backend/app/services/: analysis_service.py  latest_result_service.py  rehab_service.py  session_service.py  summary_service.py
backend/app/static/: stream_demo.html
backend/app/utils/: smoothing.py  temporal_buffer.py
backend/sessions/: test_user.json  u1.json
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/lib/: _route_names_test.dart  _routes_import_test.dart  main.dart
frontend/lib/app/: app.dart
frontend/lib/core/: app_preferences.dart  latest_analysis_store.dart  live_heatmap_screen.dart  live_skeleton_screen.dart  route_names.dart  skeleton_screen.dart  upload_screen.dart
frontend/test/: widget_test.dart
(+32 files in other folders)
