[project]
name = "nexus-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "mediapipe==0.10.9",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.22",
    "torch>=2.11.0",
    "uvicorn>=0.42.0",
]
